# holistic_fusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  catkin_workspace.vcs  compile_commands.json  jenkins-pipeline  package.xml
compslam_ros/: CMakeLists.txt  package.xml
compslam_ros/config/: graph_params.yaml
compslam_ros/include/compslam_ros/: CompslamEstimator.h  GnssHandler.h  StaticTransforms.h
compslam_ros/launch/: compslam_ros.launch
compslam_ros/src/: estimator_node.cpp
compslam_ros/src/lib/: CompslamEstimator.cpp  GnssHandler.cpp  StaticTransforms.cpp  readParams.cpp
compslam_se/: CMakeLists.txt  package.xml
compslam_se/include/compslam_se/: CompslamSe.h  CompslamSeInterface.h  GraphManager.hpp  ImuBuffer.hpp  SignalLogger.h  StaticTransforms.h
compslam_se/include/compslam_se/config/: GraphConfig.h
compslam_se/include/compslam_se/factors/: HeadingFactor.h  PitchFactor.h
compslam_se/include/compslam_se/geometry/: conversions.h  math_utils.h  wheel_odometry.h
compslam_se/include/compslam_se/gnss/: Gnss.h  GnssHandler.h
compslam_se/include/compslam_se/measurements/: BinaryMeasurement.h  BinaryMeasurement6D.h  DeltaMeasurement.h  Measurement.h  UnaryMeasurement.h  UnaryMeasurement1D.h  UnaryMeasurement3D.h  UnaryMeasurement6D.h
compslam_se/src/lib/: CompslamSe.cpp  CompslamSeInterface.cpp  Gnss.cpp  GnssHandler.cpp  GraphManager.cpp  ImuBuffer.cpp
compslam_se_ros/: CMakeLists.txt  (+1 more)
examples/multi_lidar_imu/: CMakeLists.txt  package.xml
examples/multi_lidar_imu/config/: extrinsic_params.yaml
examples/multi_lidar_imu/include/multi_lidar_imu/: MultiOdomEstimator.h
examples/multi_lidar_imu/launch/: compslam_ros.launch
examples/multi_lidar_imu/rviz/: vis.rviz
examples/multi_lidar_imu/src/: estimator_node.cpp
examples/multi_lidar_imu/src/lib/: MultiOdomEstimator.cpp
examples/ros2/smb_estimator_graph_ros2/: CMakeLists.txt  package.xml
examples/ros2/smb_estimator_graph_ros2/launch/: smb_estimator_graph.launch.py
examples/ros2/smb_estimator_graph_ros2/scripts/: remove_map_and_odom_from_bag.py
examples/ros2/smb_estimator_graph_ros2/src/: smb_estimator_node.cpp
examples/single_lidar_imu/: CMakeLists.txt  package.xml
examples/single_lidar_imu/launch/: compslam_ros.launch
examples/single_lidar_imu/src/: estimator_node.cpp
fg_filtering/: CMakeLists.txt  package.xml
fg_filtering/config/: extrinsic_params.yaml  fg_filtering_params.yaml  gnss_params.yaml  graph_params.yaml
fg_filtering/include/compslam_se/: CompslamSe.h  CompslamSeInterface.h  GraphManager.hpp  ImuBuffer.hpp  InterfacePrediction.h
fg_filtering/include/compslam_se/config/: GraphConfig.h
fg_filtering/include/compslam_se/factors/: HeadingFactor.h  HeadingFactorOld.h  PitchFactor.h
fg_filtering/include/compslam_se/geometry/: math_utils.h
fg_filtering/include/fg_filtering/: CompslamSe.h  CompslamSeInterface.h  Datatypes.hpp  FactorGraphFiltering.h  GraphManager.hpp  GraphState.hpp  ImuBuffer.hpp  ImuManager.hpp  SignalLogger.h  SignalLoggerTsif.h  StateEstimationInterface.h  StaticTransforms.h
fg_filtering/include/fg_filtering/factors/: HeadingFactor.h
fg_filtering/include/fg_filtering/geometry/: Angle.h  Vector3.h  eigen_conversions.h  math_utils.h
fg_filtering/launch/: fg_filtering.launch
fg_filtering/python/: plot.py
fg_filtering/src/: fg_filtering_node.cpp  log_tsif_node.cpp
fg_filtering/src/lib/: CompslamSe.cpp  CompslamSeInterface.cpp  FactorGraphFiltering.cpp  GraphManager.cpp  ImuBuffer.cpp  StateEstimationInterface.cpp  StaticTransforms.cpp
fg_filtering_log_msgs/: CMakeLists.txt  package.xml
fg_filtering_log_msgs/config/: rqt_multiplot.xml
fg_filtering_log_msgs/msg/: ImuMultiplot.msg  LidarMultiplot.msg
graph_msf/: CMakeLists.txt  graph_msfConfig.cmake.in  package.xml
graph_msf/config/: graph_params.yaml
graph_msf/include/graph_msf/: Datatypes.hpp  GraphManager.hpp  GraphMsf.h  GraphMsfInterface.h  ImuBuffer.hpp  StaticTransforms.h  TrajectoryAlignmentHandler.h
graph_msf/include/graph_msf/config/: AdmissibleGtsamSymbols.h  GraphConfig.h  StaticTransforms.h
graph_msf/include/graph_msf/core/: Datatypes.hpp  DynamicDictionaryContainer.h  DynamicFactorGraphStateKey.h  DynamicTransformDictionary.h  DynamicVariableType.h  FactorGraphStateKey.h  FileLogger.h  GraphManager.h  GraphManager.hpp  GraphManager.inl  GraphMsf.h  GraphState.hpp  GtsamExpressionTransforms.h  ImuMeasurement.hpp  OptimizationTransformsExtrinsics.h  Optimizer.h  OptimizerIsam2.hpp  Serialization.h  StaticTransforms.h  TimeGraphKeyBuffer.h  TransformsDictionary.h  TransformsExpressionKeys.h  UnaryAddOutcome.h
graph_msf/include/graph_msf/factors/: HeadingFactor.h
graph_msf/include/graph_msf/frontend/: GraphMsf.h  NavState.h
graph_msf/include/graph_msf/geometry/: Pose.h  Trajectory.h  conversions.h
graph_msf/include/graph_msf/gnss/: Gnss.h  GnssCovariance.h  GnssHandler.h
graph_msf/include/graph_msf/imu/: ImuBuffer.hpp  ImuSignalLowPassFilter.hpp
graph_msf/src/lib/: DualGraphMsf.cpp  FileLogger.cpp  Gnss.cpp  GnssHandler.cpp  GraphManager.cpp  GraphMsf.cpp  GraphMsfClassic.cpp  GraphMsfDualGraph.cpp  GraphMsfHolistic.cpp  GraphMsfInterface.cpp  ImuBuffer.cpp  NavState.cpp  Serialization.cpp  TimeGraphKeyBuffer.cpp  TrajectoryAlignment.cpp  TrajectoryAlignmentHandler.cpp  eigen_wrapped_gtsam_utils.cpp
ros/examples/graph_msf_ros_examples/: CMakeLists.txt  package.xml
ros/graph_msf_anymal_msgs/: CMakeLists.txt  package.xml
ros/graph_msf_anymal_msgs/msg/: Contact.msg
ros/graph_msf_catkin/: .gitignore  CMakeLists.txt  package.xml
ros2/examples/smb_estimator_graph_ros2/: CMakeLists.txt  package.xml
ros2/graph_msf_ros2/: CMakeLists.txt  graph_msf_ros2Config.cmake.in  package.xml  setup.py
ros2/graph_msf_ros2/config/: core_graph_params.yaml
ros2/graph_msf_ros2_msgs/: CMakeLists.txt  graph_msf_ros2_msgsConfig.cmake.in  package.xml
ros2/graph_msf_ros2_msgs/srv/: GetPathInEnu.srv
src/lib/: CMakeLists.txt  CompslamSe.cpp  CompslamSeInterface.cpp  FactorGraphFiltering.cpp  GraphManager.cpp  ImuBuffer.cpp  ImuManager.cpp  StaticTransforms.cpp
(+4051 files in other folders)
