<?xml version="1.0"?>
<package format="2">
  
  <name>fg_filtering_log_msgs</name>
  <version>0.0.0</version>
  <description>Log messages package for data analysis</description>
  <maintainer email="leoandreae@gmail.com">Leonardo Andreae</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>
