<?xml version="1.0"?>
<package format="2">
    <name>graph_msf</name>
    <version>0.0.0</version>

    <description>
        State estimation based on factor graphs, utilizing GTSAM functionality. Fusion of IMU, LiDAR Mapping Odometry
        and GNSS estimates.
    </description>

    <maintainer email="nubertj@ethz.ch">Julian Nubert</maintainer>
    <license>BSD</license>
    <author email="nubertj@ethz.ch">Julian Nubert</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>tf2_eigen</depend>
    <depend>std_srvs</depend>
    <build_depend>cmake_clang_tools</build_depend>
    <build_depend>eigen_colcon</build_depend>
    <build_depend>gtsam</build_depend>

    <exec_depend>eigen_colcon</exec_depend>
    <exec_depend>gtsam</exec_depend>

</package>